hphp/hack/test/typecheck/fc_enum_9.php.exp
File "fc_enum_9.php", line 13, characters 10-25:
Invalid return type (Typing[4110])
File "fc_enum_9.php", line 12, characters 41-43:
This is an int
File "fc_enum_9.php", line 3, characters 6-8:
It is incompatible with an object of type Foo
File "builtins.hhi", line 47, characters 59-59:
  via this generic T
